Bug 219742 - Editting multiple transactions corrupts date
Summary: Editting multiple transactions corrupts date
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Slackware Linux
: HI normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-12-22 21:40 UTC by Fernando Vilas
Modified: 2010-01-31 13:02 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fernando Vilas 2009-12-22 21:40:22 UTC
Version:           svn rev 1064879 (using KDE 4.3.4)
Compiler:          gcc 4.3.3 
OS:                Linux
Installed from:    Slackware Packages

Select multiple transactions in the ledger view.
Click "edit".
Fields with common values should be populated. (They are not right now)
Fields with unique values should be blank. (All are except date)

The date field is populated with today's date, even though it should be blank for transactions on different dates.

If any changes are made and saved, the transactions will all share the new date.
Comment 1 Thomas Baumgart 2010-01-09 16:37:16 UTC
I am not so sure about the fields containing common values. This is not the behavior of the KDE3 version.

I agree with the date field. I am taking care of this one.
Comment 2 Thomas Baumgart 2010-01-31 13:02:14 UTC
SVN commit 1082854 by tbaumgart:

BUG: 219742

 M  +4 -2      dialogs/transactioneditor.cpp  
 M  +14 -5     widgets/kmymoneydateinput.cpp  
 M  +26 -0     widgets/kmymoneydateinput.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1082854