BUG: 219742

svn path=/trunk/playground/office/kmymoney/; revision=1082854